2nd capstone1-app save

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Signup!</h1>
-<%= form_tag '/users', method: :post do  %>
+<%= form_tag "/users", method: :post do  %>
   <div>
     Name: <input type="text" name="name">
   </div>
@@ -12,5 +12,9 @@
   <div>
     Confirm Password: <input type="password" name="password_confirmation">
   </div>
+  <div>
+    Address: <input type="text" name="address">
+  </div>
+
   <input type="submit" value="Submit">
 <% end %>
