Capstone, adding controllers and html inputs

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,1 +1,20 @@
 <h1>Images!</h1>
+
+<section>
+      <div class="row">
+
+      <div class="row"></div>
+        <% @images.each do |image| %>
+        <div class="col-md-4">
+          <div class="well">
+            <img src="<%= image.url %>" style="width: 100%">
+          </div>
+        </div>
+        <% end %>
+      </div>
+
+      </div>
+</section>
+
+
+
