--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,4 +1,28 @@
 <h1>Lost Pets!</h1>
+<br>
+
+
+<section>
+
+    <p><%= @pets %></p>
+      <%= form_tag "/pets", method: "get" do %>
+      Animal: <form action="/action_page.php">
+                <select name="Animal">
+                  <option value="dog">dog</option>
+                  <option value="cat">Cat</option>
+                </select>
+                <br>
+                <br>
+                
+              </form>
+      Breed: <input type="text" breed="form_breed">
+      Color: <input type="text" color="form_color">
+      City: <input type="text" name="form_city">
+      State: <input type="text" name="form_state">
+      Neighborhood: <input type="text" name="form_neighborhood">
+      <input type="submit" value="Submit">
+      <% end %>
+
 
  <section>
       <div class="row">
@@ -36,3 +60,5 @@
 
       </div>
  </section>
+
+ 
