--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="/js/jquery.min.js"></script>
   </head>
 
   <body>
@@ -116,6 +117,7 @@
         <!-- /END CONTAINER -->
       </div>
       <!-- /END STICKY NAVIGATION -->
+
       <section class=" parallax-bg" data-parallax="scroll" data-image-src="/images/mimic/bg-1.jpg">
         <div class="image-wrap">
           <div class="container-mid">
@@ -131,6 +133,29 @@
           </div>
         </div>
       </section>
+
+     <!--  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+         <div class="carousel-item active">
+          <img class="d-block img-fluid" src="https://www.dogbreedinfo.com/images17/FrenchBulldogHarley8months.JPG" alt="First slide">
+         </div>
+         <div class="carousel-item">
+          <img class="d-block img-fluid" src="..." alt="Second slide">
+         </div>
+         <div class="carousel-item">
+          <img class="d-block img-fluid" src="..." alt="Third slide">
+         </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+         <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+         <span class="sr-only">Next</span>
+        </a>
+      </div>
+     -->
     </header>
     <!-- /END HEADER -->
 
@@ -170,7 +195,6 @@
     <!-- =========================
       SCRIPTS
       ============================== -->
-    <script src="/js/jquery.min.js"></script>
     <script src="/js/jquery-migrate-3.0.0.js"></script>
     <script src="/https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="/js/modernizr.custom.js"></script>
