--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -6,7 +6,49 @@
   }
 </style>
 
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#Carousel').carousel({
+        interval: 5000
+    })
+});
+</script>
+
 <section>
+<h2>Lost pets</h2>
+<div class="container">
+    <div class="row">
+    <div class="col-md-12">
+                <div id="Carousel" class="carousel slide">
+                 
+                <ol class="carousel-indicators">
+                <% @lost_pets.each_slice(4).with_index do |four_lost_pets, index| %>
+                    <li data-target="#Carousel" data-slide-to="<%= index %>" class="<%= index == 0 ? 'active' : '' %>"></li>
+                <% end %>
+                </ol>
+                 
+                <div class="carousel-inner">
+
+                <% @lost_pets.each_slice(4) do |four_lost_pets| %>
+                <div class="item">
+                  <div class="row">
+                    <% four_lost_pets.each do |lost_pet| %>
+                    <div class="col-md-3"><a href="#" class="thumbnail"><img src="<%= lost_pet.images.first.url %>" alt="Image" style="max-width:100%;"></a></div>
+                    <% end %>
+                  </div>
+                </div>  
+                <% end %>
+
+                 
+                </div><!--.carousel-inner-->
+
+                  <a data-slide="prev" href="#Carousel" class="left carousel-control">‹</a>
+                  <a data-slide="next" href="#Carousel" class="right carousel-control">›</a>
+                </div><!--.Carousel-->
+                 
+    </div>
+  </div>
+</div><!--.container-->
 
     <p><%= @pets %></p>
       <%= form_tag "/pets", method: "get" do %>
