--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->
-    <%= csrf_meta_tags %>
+<!--     <%= csrf_meta_tags %> -->
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -90,8 +90,8 @@
             <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-              <img src="/images/logo.png" alt="logo" />
-              <div class="logo-title">mimic</div>
+              <!-- <img src="/images/logo.png" alt="logo" /> -->
+              <div class="logo-title">Sherlock Paws</div>
             </a>
           </div>
           <!-- NAVIGATION LINKS -->
@@ -99,14 +99,14 @@
             <ul class="nav navbar-nav navbar-right main-navigation">
               <li><a href="/#home">home</a></li>
               <li><a href="/about.html">about</a></li>
-              <li><a href="/service.html">services</a></li>
+              <li><a href="/signup">signup</a></li>
               <li class="dropdown">
-                <a href="/#" class="dropdown-toggle" data-toggle="dropdown">Portfolio</a>
-                <ul class="dropdown-menu">
+                <a href="/login">Login</a>
+               <!--  <ul class="dropdown-menu">
                   <li><a href="/portfolio-3-col-masonry.html">Masonry 3 col</a></li>
                   <li><a href="/portfolio-3-col-grid.html">Grid 3 col</a></li>
                   <li><a href="/portfolio-4-col-grid.html">Grid 4 col</a></li>
-                </ul>
+                </ul> -->
               </li>
               <li><a href="/blog-list.html">blog</a></li>
               <li><a href="/contact.html">contact</a></li>
@@ -118,7 +118,7 @@
       </div>
       <!-- /END STICKY NAVIGATION -->
 
-      <section class=" parallax-bg" data-parallax="scroll" data-image-src="/images/mimic/bg-1.jpg">
+     <!--  <section class=" parallax-bg" data-parallax="scroll" data-image-src="/images/mimic/bg-1.jpg">
         <div class="image-wrap">
           <div class="container-mid">
             <div class="image-color-overlay">
@@ -132,7 +132,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
      <!--  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" role="listbox">
@@ -196,7 +196,7 @@
       SCRIPTS
       ============================== -->
     <script src="/js/jquery-migrate-3.0.0.js"></script>
-    <script src="/https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
     <script src="/js/modernizr.custom.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/smoothscroll.js"></script>
