--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="author" content="rashed amin">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- SITE TITLE -->
-    <title>mimic</title>
+    <title>Sherlock Paws</title>
     <!-- =========================
       FAV AND TOUCH ICONS (RETINA)
       ============================== -->
@@ -51,7 +51,7 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->
-<!--     <%= csrf_meta_tags %> -->
+    <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -97,9 +97,9 @@
           <!-- NAVIGATION LINKS -->
           <div class="navbar-collapse collapse" id="navigation">
             <ul class="nav navbar-nav navbar-right main-navigation">
-              <li><a href="/#home">home</a></li>
+              <li><a href="/pets">home</a></li>
               <li><a href="/about.html">about</a></li>
-              <li><a href="/signup">signup</a></li>
+              <li><a href="/signup">sign up</a></li>
               <li class="dropdown">
                 <a href="/login">Login</a>
                <!--  <ul class="dropdown-menu">
@@ -166,7 +166,7 @@
     <footer class="footer-section footer-2">
       <div class="row footer-content">
         <div class="col-md-10 col-md-offset-1 footer-column">
-          <p>mimic INC.</p>
+          <p>Sherlock Paws Inc.</p>
           <ul class="footer__nav-list">
             <li class="footer__nav-item"><a href="#about" class="footer__nav-link">About</a></li>
             <li class="footer__nav-item"><a href="blog-list-01.html" class="footer__nav-link">Blog</a></li>
