--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -19,5 +19,5 @@
   <a href="/pets/<%= @pet.id %>/edit">Edit this pet</a>
 </div>
 <%= form_tag "/pets/#{@pet.id}", method: "delete" do %>
-  <input type="submit" value="Destroy pet">
+  <input type="submit" value="Edit pet">
 <% end %>
