--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
           <div class="navbar-collapse collapse" id="navigation">
             <ul class="nav navbar-nav navbar-right main-navigation">
               <li><a href="/pets">home</a></li>
-              <li><a href="/about.html">about</a></li>
+              <li><a href="/pets/new">upload lost or found pets</a></li>
               <li><a href="/signup">sign up</a></li>
               <li class="dropdown">
                 <a href="/login">Login</a>
