Added Paper clip

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -181,7 +181,7 @@
             <li><a href="/"><i class="icon-googleplus"></i></a></li>
           </ul>
           <div class="copyright-2">
-            All work is the property of mimic Inc.
+            All work is the property of Sherlock Paws Inc.
             <br> &copy; themenow. All Rights Reserved.
           </div>
         </div>
