--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,4 +1,4 @@
-<img src="<%= @pet.images.first.url %>" style="max-width: 75%">
+<img src="<%= @pet.images.first.online_url %>" style="max-width: 75%">
 <h1>User id</h1>
 <h2><%= @pet.user_id %></h2>
 <h2>Lost or found: <%= @pet.lost_or_found %></h2>
