--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -8,88 +8,79 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-    $('#Carousel').carousel({
-        interval: 5000
-    });
+    $('#firstcarousel, #secondcarousel').carousel({
+        interval: false
+    });    
 });
 </script>
 
-<section>
+
 <h2>Lost pets</h2>
 <div class="container">
-    <div class="row">
-    <div class="col-md-12">
-                <div id="Carousel" class="carousel slide">
-                 
-                <ol class="carousel-indicators">
-                <% @lost_pets.each_slice(4).with_index do |four_lost_pets, index| %>
-                    <li data-target="#Carousel" data-slide-to="<%= index %>" class="<%= index == 0 ? 'active' : '' %>"></li>
-                <% end %>
-                </ol>
-                 
-                <div class="carousel-inner">
-
-                <% @lost_pets.each_slice(4) do |four_lost_pets| %>
-                <div class="item">
-                  <div class="row">
-                    <% four_lost_pets.each do |lost_pet| %>
-                    <div class="col-md-3"><a href="/pets/<%= lost_pet.id %>" class="thumbnail"><img src="<%= lost_pet.images.first.src %>" alt="Image" class="img-fluid"></a>
-                    </div>
-                <% end %>
-                  </div>
-                </div>  
-                <% end %>
-
-                 
-                </div><!--.carousel-inner-->
-
-                  <a data-slide="prev" href="#Carousel" class="left carousel-control">‹</a>
-                  <a data-slide="next" href="#Carousel" class="right carousel-control">›</a>
-                </div><!--.Carousel-->
-                 
-    </div>
-  </div>
-<br>
-<br>
-
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('#Carousel2').carousel({
-        interval: 5000
-    });
-});
-</script>
-
-<section>
-<h2>Found Pets</h2>
-<div class="container2">
-    <div class="row">
+    <div class="row" id="firstcarousel" >
       <div class="col-md-12">
-                <div id="Carousel2" class="carousel slide">
-                 
-                <ol class="carousel-indicators">
-                <% @found_pets.each_slice(4).with_index do |four_found_pets, index| %>
-                    <li data-target="#Carousel2" data-slide-to="<%= index %>" class="<%= index == 0 ? 'active' : '' %>"></li>
-                <% end %>
-                </ol>
-                 
-                <div class="carousel-inner">
+                  <div class="carousel slide">
+                  <div class="carousel-inner">
+                  <% @lost_pets.each_slice(4) do |four_lost_pets| %>
+                  <div class="item">
+                    <div class="row">
+                      <% four_lost_pets.each do |lost_pet| %>
+                      <% if lost_pet.images.first.online_url != "" %>
+                      <div class="col-md-3"><a href="/pets/<%= lost_pet.id %>" class="thumbnail"><img src="<%= lost_pet.images.first.src %>" alt="Image" class="img-fluid"></a>
+                      </div>
+                      <% else %>
+                      <div class="col-md-3"><a href="/pets/<%= lost_pet.id %>" class="thumbnail"><img src="https://3.bp.blogspot.com/-PpjfsStySz0/UF91FE7rxfI/AAAAAAAACl8/092MmUHSFQ0/s1600/no_image.jpg" alt="Image" class="img-fluid"></a>
+                      </div>  
+                      <% end %>                      
+                  <% end %>
+                    </div>
+                  </div>  
+                  <% end %>
 
+                   
+                  </div><!--.carousel-inner-->
+
+                    <a data-slide="prev" href="#firstcarousel" class="left carousel-control">‹</a>
+                    <a data-slide="next" href="#firstcarousel" class="right carousel-control">›</a>
+                  </div><!--.Carousel-->
+                   
+      </div>
+  </div>
+</div>  
+<br>
+<br>
+
+
+
+<h2>Found Pets</h2>
+<div class="container">
+    <div class="row" id="secondcarousel" >
+      <div class="col-md-12">
+                <div class="carousel slide">               
+                <div class="carousel-inner">
                 <% @found_pets.each_slice(4) do |four_found_pets| %>
                 <div class="item">
                   <div class="row">
                     <% four_found_pets.each do |found_pet| %>
-                    <div class="col-md-3"><a href="/pets/<%= found_pet.id %>" class="thumbnail"><img src="<%= found_pet.images.first.src %>" alt="Image" style="max-width:100%;"></a></div>
+                      <% if found_pet.images.first.online_url != "" %>
+                      <div class="col-md-3"><a href="/pets/<%= found_pet.id %>" class="thumbnail"><img src="<%= found_pet.images.first.src %>" alt="Image" class="img-fluid"></a>
+                      </div>
+                      <% else %>
+                      <div class="col-md-3"><a href="/pets/<%= found_pet.id %>" class="thumbnail"><img src="https://3.bp.blogspot.com/-PpjfsStySz0/UF91FE7rxfI/AAAAAAAACl8/092MmUHSFQ0/s1600/no_image.jpg" alt="Image" class="img-fluid"></a>
+                      </div>
+                      <% end %>
                     <% end %>
                   </div>
                 </div>  
                 <% end %>
 
+                <!-- style="max-width:100%;" -->
+
                  
                 </div><!--.carousel-inner-->
 
-                  <a data-slide="prev" href="#Carousel2" class="left carousel-control">‹</a>
-                  <a data-slide="next" href="#Carousel2" class="right carousel-control">›</a>
+                  <a data-slide="prev" href="#secondcarousel" class="left carousel-control">‹</a>
+                  <a data-slide="next" href="#secondcarousel" class="right carousel-control">›</a>
                 </div><!--.Carousel-->
                  
       </div>
@@ -120,43 +111,4 @@
 
  <br>
  <br>
- 
-
- <!-- <section>
-      <div class="row">
-
-        <% @lost_pets.each do |lost_pet| %>
-
-          
-            
-              <h1><%= lost_pet.name %></h1>
-              <p></p>
-              <a href="/pets/<%= lost_pet.id %>" title="View pet"><%= lost_pet.name %></a>
-              <p>Description:  <%= lost_pet.description %></p>
-        
-        <% end %>
-
-      </div>
- </section>
-
-
-<h2>Found Pets!</h2>
-
- <section>
-      <div class="row">
-
-        <% @found_pets.each do |found_pet| %>
-
-          
-            
-              <h1><%= found_pet.name %></h1>
-              <p></p>
-              <a href="/pets/<%= found_pet.id %>" title="View pet"><%= found_pet.name %></a>
-              <p>Description:  <%= found_pet.description %></p>
-        
-        <% end %>
-
-      </div>
- </section>
- -->
  
