Updated theme, second gallery of pets

--- a/app/assets/stylesheets/pets.scss
+++ b/app/assets/stylesheets/pets.scss
@@ -7,13 +7,14 @@ body{padding-top:10px;}
     padding: 0 40px 30px 40px;
 }
 .carousel-inner {
-  height: 175px;
+  height: 250px;
 }
 // .carousel .item, .carousel .row, .carousel .row .col-md-3 {
 //   height: 100% !important;
 // }
 .carousel .item .thumbnail {
   height: 250px !important;
+  width: 250px !important;
 }
 /* The controlsy */
 .carousel-control {
@@ -46,4 +47,8 @@ background: #428bca;
 
 form input {
   color: black !important;
+}
+
+.lost {
+  filter: grayscale(100%);
 }
