--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,6 +1,82 @@
+    <section id="portfolio-top" class="portfolio-project pad-top-60">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+            <div class="portfolio-project-media">
+              <img src="<%= @pet.images.first.online_url %>" class="img-fluid" alt="portfolio">
+            </div>
+            <div class="col-md-4 col-sm-12 col-xs-12">
+              <ul class="portfolio-project-info">
+                <li> Pet Name : <span> <%= @pet.name ? @pet.name : "Unknown" %></span>
+                </li>
+                <li>created by :<span> <%= @pet.user.name %></span>
+                </li>
+                <li>another thing :<span> hello</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4 col-sm-12 col-xs-12">
+              <ul class="portfolio-project-info">
+                <li>created at :<span>  <%= @pet.created_at %></span>
+                </li>
+                <li>skills used: <span>  HTML5/PHP/CSS3</span>
+                </li>
+                <li>another thing :<span> hello</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4 col-sm-12 col-xs-12">
+              <ul class="portfolio-project-info">
+                <li>category : <span> web application</span>
+                </li>
+                <li>share: <a href="#"><i class="icon-facebook"></i></a> <a href="#"><i class=" icon-dribbble "></i></a> <a href="#"><i class="icon-twitter"></i></a> <a href="#"><i class="icon-googleplus"></i></a> <a href="#"><i class="icon-linkedin"></i></a>
+                </li>
+                <li>another thing :<span> hello</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-12 col-sm-12 col-xs-12">
+            <!-- Project Title -->
+            <h4 class="portfolio-project-title">project details</h4>
+            <!-- Project body text -->
+            <div class="portfolio-project-details">
+              <p>
+                Some people believe that the good life is attainable through education, while others believe that following a rule of conduct would leave you leading the <q>Still others say that being truly happy will allow you to live a good life. There are many questions that arise when trying to answer the question of "What is the good life and how can it be attained.</q>
+              </p>
+              <p>
+                Some people believe that the good life is attainable through education, while others believe that following a rule of conduct would leave you leading the <q>Still others say that being truly happy will allow you to live a good life. There are many questions that arise when trying to answer the question of "What is the good life and how can it be attained.</q>
+              </p>
+            </div>
+            <!--/ End Portfolio details text -->
+            <nav class="article-nav row">
+              <a href="#ignore-click" class="article-nav-link col-sm-6">
+                <i class="arrow_carrot-2left"></i>
+                <p>previous
+                  <br> project
+                </p>
+              </a>
+              <a href="#ignore-click" class="article-nav-link col-sm-6">
+                <p>next
+                  <br> project
+                </p>
+                <i class=" arrow_carrot-2right"></i>
+              </a>
+            </nav>
+            <!-- End Comments -->
+            <!-- Add Comment -->
+            <div id="end-content"></div>
+          </div>
+          <!--/ End col -->
+          <!--/ End col -->
+        </div>
+        <!--/ End row -->
+      </div>
+      <!--/ End container -->
+    </section>
+
+
 <img src="<%= @pet.images.first.online_url %>" style="max-width: 75%">
-<h1>User id</h1>
-<h2><%= @pet.user_id %></h2>
 <h2>Lost or found: <%= @pet.lost_or_found %></h2>
 <p>Name: <%= @pet.name %></p>
 <p>Animal: <%= @pet.animal %></p>
@@ -11,13 +87,14 @@
 <p>Neighborhood: <%= @pet.neighborhood %></p>
 <p>Description: <%= @pet.description %></p>
 <p>Time: <%= @pet.time %></p>
+<h4>Email <%= @pet.user.email %> if you have any information!</h4>
 
 <div>
   <a href="/pets">Return to all pets</a>
 </div>
-<div>
+<!-- <div>
   <a href="/pets/<%= @pet.id %>/edit">Edit this pet</a>
 </div>
 <%= form_tag "/pets/#{@pet.id}", method: "delete" do %>
   <input type="submit" value="Edit pet">
-<% end %>
+<% end %> -->
