--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <!-- =========================
       FAV AND TOUCH ICONS (RETINA)
       ============================== -->
-    <link rel="icon" href="/images/favicon.ico">
+    <%= favicon_link_tag 'favicon.png' %>
+<!--     <link rel="icon" href="/images/favicon.ico">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
@@ -21,7 +22,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-icon-152x152.png" />
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
-    <meta name="msapplication-TileImage" content="ms-icon-144x144.png" />
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png" /> -->
     <!-- =========================
       STYLESHEETS
       ============================== -->
@@ -182,7 +183,7 @@
           </ul>
           <div class="copyright-2">
             All work is the property of Sherlock Paws Inc.
-            <br> &copy; themenow. All Rights Reserved.
+            <br> &copy; All Rights Reserved.
           </div>
         </div>
       </div>
