--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -36,6 +36,10 @@
   </div>
   <br>
   <div>
+    Description: <input type="text" name="description">
+  </div>
+  <br>
+  <div>
     Image: <input type="file" name="image_url">
   </div>
   <input type="submit" class="btn btn-default" value="Create pet">
