--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -3,7 +3,9 @@
         <div class="row">
           <div class="col-md-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
             <div class="portfolio-project-media">
+              <% if @pet.images.first %>
               <img src="<%= @pet.images.first.online_url %>" class="img-fluid" alt="portfolio">
+              <% end %> 
             </div>
             <div class="col-md-4 col-sm-12 col-xs-12">
               <ul class="portfolio-project-info">
@@ -75,8 +77,9 @@
       <!--/ End container -->
     </section>
 
-
+<% if @pet.images.first %>
 <img src="<%= @pet.images.first.online_url %>" style="max-width: 75%">
+<% end %> 
 <h2>Lost or found: <%= @pet.lost_or_found %></h2>
 <p>Name: <%= @pet.name %></p>
 <p>Animal: <%= @pet.animal %></p>
