--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -11,7 +11,7 @@
               <ul class="portfolio-project-info">
                 <li>Pet Name: <span> <%= @pet.name ? @pet.name : "Unknown" %></span>
                 </li>
-                <li>created by: <span> <%= @pet.user.name %></span>
+                <li>created by user: <span> <%= @pet.user.name %></span>
                 </li>
                 <li>breed: <span> <%= @pet.breed %></span>
                 </li>
@@ -40,7 +40,7 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
             <!-- Project Title -->
-            <h4 class="portfolio-project-title">project details</h4>
+            <h4 class="portfolio-project-title">Description</h4>
             <!-- Project body text -->
             <div class="portfolio-project-details">
               <p>
