--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -62,8 +62,8 @@
 
 <h2>Found Pets (<%= @found_pets.length %>)</h2>
 <div class="container">
-  <div class="row" >
-    <div class="col-md-12" id="secondcarousel" >
+  <div class="row" id="secondcarousel" >
+    <div class="col-md-12"  >
       <div class="carousel slide" data-ride="carousel">               
         <div class="carousel-inner">
           <% @found_pets.each_slice(4) do |four_found_pets| %>
